--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -9,9 +9,9 @@
         android:id="@+id/imageView"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:scaleType="centerCrop"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="8dp" />
+        android:layout_gravity="left"
+        android:layout_marginBottom="8dp"
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/nameTextView"
